--- a/src/style.css
+++ b/src/style.css
@@ -8,13 +8,14 @@ html {
 }
 
 a {
-  color: black;
+  color: rgb(255, 255, 255);
   font-size: 2.5em;
   text-decoration: none;
+  transition: all 0.2s ease-in-out;
 }
 
 body {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
 }
 
 svg {
@@ -22,18 +23,19 @@ svg {
 }
 
 button {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
   border: none;
 }
 
 .header {
-  background-color: aqua;
+  background-color: rgb(0, 0, 0);
   width: 100vw;
   height: 20vh;
   display: flex;
   justify-content: space-around;
   align-items: center;
   padding: 5rem;
+  border-bottom: 1px solid white;
 }
 
 .dropdown {
@@ -55,4 +57,5 @@ button {
 a:hover {
   color: rgb(205, 205, 205);
   cursor: pointer;
+  transform: scale(1.4);
 }
